python강의/1일차(파이썬설치및 변수,출력,리스트,튜플,for문까지)/1일차.txt
강사:이성주

파이썬->콘솔 위주의 작업이 많다.(CLI)->command line interface
=============================================================

http://www.sublimetext.com/=>편집기를 다운로드 받음.


C:\Python34>python
Python 3.4.2 (v3.4.2:ab2c023a9432, Oct  6 2014, 22:16:31) [MSC v.1600 64 bit (AM
D64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> a
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'a' is not defined
>>> version=2
>>> lang='파이썬'
>>> version
2
>>> lang
'파이썬'
>>> pring(lang)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pring' is not defined
>>> print(lang)
파이썬

>>> print(version)
2
>>> print('파이썬 3')
파이썬 3
>>> print(lang+version)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: Can't convert 'int' object to str implicitly
>>> print(lang,version)
파이썬 2
>>> lang,version
('파이썬', 2)
>>> print((1,2))
(1, 2)
>>> print(('a','b'))
('a', 'b')
>>> version=3
>>> print(lang,version)
파이썬 3
>>>

>>> lang[0]
'파'
>>> subjects
['생명과학 입문', '공학전산', '스포츠댄스']
>>> subjects[0:2]
['생명과학 입문', '공학전산']
>>> subjects[1:2]
['공학전산']
>>> subjects[1:3]
['공학전산', '스포츠댄스']
>>> subjects[1:4]
['공학전산', '스포츠댄스']
>>> text='저는 파이썬 프로그래머입니다.'
>>> text[3:6]
'파이썬'
>>> professional=text[7:12]
>>> professional
'프로그래머'
>>> '프로그래머만 추출해서 출력해 보는 예제입니다.'
'프로그래머만 추출해서 출력해 보는 예제입니다.'
>>> print(professional)
프로그래머
>>> lang='python'
>>> lang[0::2]
'pto'
>>> num_seq=[1,2,3,4,5,6,7,8,9,10]
>>> num_seq[0::2]
[1, 3, 5, 7, 9]
>>> num_seq[0::2]
[1, 3, 5, 7, 9]
>>> num_seq[1::2]
[2, 4, 6, 8, 10]
>>> lang
'python'
>>> lang[-1]
'n'
>>> lang[-2]
'o'
>>> lang[-3]
'h'
>>> len(lang)
6
>>> len(lang)-1
5
>>> lang[5]
'n'
>>> scores=[67,90,87,32]
>>> total=scores[0]+scores[1]+scores[2]+scores[3]
>>> avg=total/4
>>> total
276
>>> avg
69.0
>>> sum(scores)
276
>>> avg(scores)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'float' object is not callable
>>> avg=total/len(scores)
>>> avg
69.0
>>> 1+2*4
9
>>> (1+2)*4
12
>>> (1,2)
(1, 2)
>>> (1,2,3,)
(1, 2, 3)
>>> num_seq=(1,2,3,4)
>>> num_seq[0]
1
>>> num_list=[1,2,3,4]
>>> scores
[67, 90, 87, 32]
>>> scores[1]=90;
>>> scores
[67, 90, 87, 32]
>>> num_seq
(1, 2, 3, 4)
>>> num_seq[1]=5
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'tuple' object does not support item assignment
>>> for i in [1,2,3,4]:
...  print(i)
...
1
2
3
4
>>> sum=0
>>> for i in [1,2,3,4]:
...  sum=sum+i
...
>>> sum
10
>>> total=0
>>> for i in [67,90,87,32]:
...  total=total+i
...
>>>  total
  File "<stdin>", line 1
    total
    ^
IndentationError: unexpected indent
>>> for i in scores:
...  total=total+i
...
>>> total
552
>>> for i in [1,2,3,4,5]:
...  print('헬로')
...
헬로
헬로
헬로
헬로
헬로
>>> lang
'python'
>>> for s in lang:
...  print(s)
...
p
y
t
h
o
n
>>> for s in lang:
... print(s, end=' ')
  File "<stdin>", line 2
    print(s, end=' ')
        ^
IndentationError: expected an indented block
>>>  for s in lang:
  File "<stdin>", line 1
    for s in lang:
    ^
IndentationError: unexpected indent
>>> for s in lang:
...   print(s,end=' ')
...
p y t h o n >>>
>>> lang
'python'
>>> for s in lang:
...   doublelang=doublelang+s+s
...
Traceback (most recent call last):
  File "<stdin>", line 2, in <module>
NameError: name 'doublelang' is not defined
>>> doublelang=''
>>> doublelang=doublelang+'a'
>>> doublelang
'a'
>>> scores
[67, 90, 87, 32]
>>> scores=[['A',90],['B',85],['C',92],['D',67]]
>>> scores
[['A', 90], ['B', 85], ['C', 92], ['D', 67]]
>>> scores[0]
['A', 90]
>>> scores[0][0]
'A'
>>> scores[0][1]
90
>>> sum=0
>>> for i in scores:
...  sum=sum+i
...
...
Traceback (most recent call last):
  File "<stdin>", line 2, in <module>
TypeError: unsupported operand type(s) for +: 'int' and 'list'
>>> for i in scores:
...    print(i)
...
['A', 90]
['B', 85]
['C', 92]
['D', 67]
>>>  for i in scores:
  File "<stdin>", line 1
    for i in scores:
    ^
IndentationError: unexpected indent
>>> for i in scores:
...   print(i[0])
...
...
A
B
C
D
>>> for i in scores:
...  print(i[0][0])
...
...
A
B
C
D
>>> for i in scores:
...  print(i[1])
...
...
90
85
92
67
>>> sum=0
>>> for i in scores:
...  sum=sum+i[1]
...
>>>
>>> sum
334
>>> len(scores)
4
>>> deck=[]
>>> a=[1]
>>> append(2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'append' is not defined
>>> a.append(2)
>>> print(a)
[1, 2]
>>> a.append(3)
>>> a
[1, 2, 3]
>>> a.pop()
3
>>> a.pop()
2
>>> a.pop()
1
>>> a
[]
>>> deck=[]
>>> deck.append([2,'Heart'])
>>> deck
[[2, 'Heart']]
>>> deck.append([3,'Heart'])
>>> deck
[[2, 'Heart'], [3, 'Heart']]
>>> deck=[]
>>> for r in ranks:
...   deck.append([r,'Heart'])
...
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'ranks' is not defined
>>> ranks=(2,3,4,5,6,7,8,9,j,k,Q,A)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'j' is not defined
>>> ranks=[2,3,4,5,6,7,8,9,10,'J','Q','K','A']
>>> for r in ranks:
...   deck.append([r,'Heart'])
...
>>> deck
[[2, 'Heart'], [3, 'Heart'], [4, 'Heart'], [5, 'Heart'], [6, 'Heart'], [7, 'Hear
t'], [8, 'Heart'], [9, 'Heart'], [10, 'Heart'], ['J', 'Heart'], ['Q', 'Heart'],
['K', 'Heart'], ['A', 'Heart']]
>>> len(deck)
13
>>> for r in ranks:
...  deck.append([r,'Heart'])
...  deck.append([r,'Clover'])
...  deck.append([r,'Spade'])
...  deck.append([r,'Diamond'])
...
>>> len(deck)
65
>>> suits=['Heart','Clover','Spade','Diamond']
>>> deck=[]
>>> for r in ranks:
...  for s in suits:
...   deck.append([r,s])
...
>>> deck
[[2, 'Heart'], [2, 'Clover'], [2, 'Spade'], [2, 'Diamond'], [3, 'Heart'], [3, 'C
lover'], [3, 'Spade'], [3, 'Diamond'], [4, 'Heart'], [4, 'Clover'], [4, 'Spade']
, [4, 'Diamond'], [5, 'Heart'], [5, 'Clover'], [5, 'Spade'], [5, 'Diamond'], [6,
 'Heart'], [6, 'Clover'], [6, 'Spade'], [6, 'Diamond'], [7, 'Heart'], [7, 'Clove
r'], [7, 'Spade'], [7, 'Diamond'], [8, 'Heart'], [8, 'Clover'], [8, 'Spade'], [8
, 'Diamond'], [9, 'Heart'], [9, 'Clover'], [9, 'Spade'], [9, 'Diamond'], [10, 'H
eart'], [10, 'Clover'], [10, 'Spade'], [10, 'Diamond'], ['J', 'Heart'], ['J', 'C
lover'], ['J', 'Spade'], ['J', 'Diamond'], ['Q', 'Heart'], ['Q', 'Clover'], ['Q'
, 'Spade'], ['Q', 'Diamond'], ['K', 'Heart'], ['K', 'Clover'], ['K', 'Spade'], [
'K', 'Diamond'], ['A', 'Heart'], ['A', 'Clover'], ['A', 'Spade'], ['A', 'Diamond
']]
>>> len(deck)
52
>>>


=>문제
 네 과목의 점수를 변수 scores에 저장한다.
 1.네 과목점수의 합계를 구한다.
 2.과목 평균을 구한다.

>>> scores=[67,90,87,32]
>>> total=scores[0]+scores[1]+scores[2]+scores[3]
>>> avg=total/4
>>> total
276
>>> avg
69.0

